--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter&family=Roboto&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/owl.carousel.css">
+    <link rel="stylesheet" href="css/owl.theme.default.css">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/rickzerr91.css">
     <link rel="stylesheet" href="css/vlad27171.css">
@@ -28,7 +30,9 @@
 <header>
 
 </header>
-<section class="main_banner"></section>
+<section class="main_banner">
+    <div class="owl-carousel_1"></div>
+</section>
 <section class="about_us"></section>
 <section class="best_sellers"></section>
 <section class="best_selling_big"></section>
@@ -37,9 +41,15 @@
 <section class="testimonials"></section>
 <section class="faq"></section>
 <section class="latest_posts"></section>
-<section class="carusel"></section>
+<section class="carusel">
+    <div class="owl-carousel_2"></div>
+</section>
 <footer>
 
 </footer>
+
+<script src="https://code.jquery.com/jquery-3.6.1.min.js" integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
+<script src="js/owl.carousel.js"></script>
+<script src="js/scripts.js"></script>
 </body>
 </html>
