--- a/index.html
+++ b/index.html
@@ -38,7 +38,16 @@
 <section class="about_us"></section>
 <section class="best_sellers"></section>
 <section class="best_selling_big"></section>
-<section class="how_it_works"></section>
+<section class="how_it_works">
+    <p>How it works</p>
+    <h3>It’s easy as 1, 2, 3</h3>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, suspendisse varius enim in eros. Elementum tristique duis cursus, mi quis viverra ornare eros dolor.</p>
+    <div>
+        <article></article>
+        <article></article>
+        <article></article>
+    </div>
+</section>
 <section class="collection"></section>
 <section class="testimonials"></section>
 <section class="faq">
@@ -68,7 +77,6 @@
     <div class="owl-carousel_2"></div>
 </section>
 <footer>
-
 </footer>
 
 <script src="https://code.jquery.com/jquery-3.6.1.min.js" integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
