--- a/index.html
+++ b/index.html
@@ -39,13 +39,30 @@
 <section class="best_sellers"></section>
 <section class="best_selling_big"></section>
 <section class="how_it_works">
-    <p>How it works</p>
-    <h3>It’s easy as 1, 2, 3</h3>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, suspendisse varius enim in eros. Elementum tristique duis cursus, mi quis viverra ornare eros dolor.</p>
-    <div>
-        <article></article>
-        <article></article>
-        <article></article>
+    <div class="container">
+        <div class="how_it_works_first">
+            <p>How it works</p>
+            <h3>It’s easy as 1, 2, 3</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, suspendisse varius enim in eros. Elementum
+                tristique
+                duis cursus, mi quis viverra ornare eros dolor.</p></div>
+        <div class="d-flex space-between">
+            <article>
+                <img src="/images/clean_hands.svg" alt="#">
+                <h4>Apply the product</h4>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique.</p>
+            </article>
+            <article>
+                <img src="images/timelapse.svg" alt="#">
+                <h4>Wait for the skin to absorb</h4>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique.</p>
+            </article>
+            <article>
+                <img src="/images/check_circle.svg" alt="#">
+                <h4>And that’s it</h4>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique.</p>
+            </article>
+        </div>
     </div>
 </section>
 <section class="collection"></section>
