--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, suspendisse varius enim in eros. Elementum
                 tristique
                 duis cursus, mi quis viverra ornare eros dolor.</p></div>
-        <div class="d-flex space-between">
+        <div class="d-flex space-between how_it_works_second">
             <article>
                 <img src="/images/clean_hands.svg" alt="#">
                 <h4>Apply the product</h4>
