--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 duis cursus, mi quis viverra ornare eros dolor.</p></div>
         <div class="d-flex space-between how_it_works_second">
             <article>
-                <img src="/images/clean_hands.svg" alt="#">
+                <img src="images/clean_hands.svg" alt="#">
                 <h4>Apply the product</h4>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique.</p>
             </article>
@@ -58,7 +58,7 @@
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique.</p>
             </article>
             <article>
-                <img src="/images/check_circle.svg" alt="#">
+                <img src="images/check_circle.svg" alt="#">
                 <h4>And that’s it</h4>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique.</p>
             </article>
