--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
 
 </header>
 <section class="main_banner">
-    <div class="owl-carousel_1"></div>
+    <div class="owl-carousel_1">
+
+    </div>
 </section>
 <section class="about_us"></section>
 <section class="best_sellers"></section>
@@ -90,8 +92,27 @@
     </div>
 </section>
 <section class="latest_posts"></section>
-<section class="carusel">
-    <div class="owl-carousel_2"></div>
+<section class="carusel container">
+    <div class="owl-carousel">
+        <article>
+            <a href="#"><img src="images/foto_carusel1.jpg" alt="foto"></a>
+        </article>
+        <article>
+            <a href="#"><img src="images/foto_carusel2.jpg" alt="foto"></a>
+        </article>
+        <article>
+            <a href="#"><img src="images/foto_carusel3.jpg" alt="foto"></a>
+        </article>
+        <article>
+            <a href="#"><img src="images/foto_carusel4.jpg" alt="foto"></a>
+        </article>
+        <article>
+            <a href="#"><img src="images/foto_carusel1.jpg" alt="foto"></a>
+        </article>
+        <article>
+            <a href="#"><img src="images/foto_carusel2.jpg" alt="foto"></a>
+        </article>
+    </div>
 </section>
 <footer>
 </footer>
