h4 add to main.css

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 <section class="how_it_works">
     <div class="container">
         <div class="how_it_works_first">
-            <p>How it works</p>
+            <h4>How it works</h4>
             <h3>It’s easy as 1, 2, 3</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, suspendisse varius enim in eros. Elementum
                 tristique
