section about us

--- a/index.html
+++ b/index.html
@@ -37,7 +37,17 @@
 
     </div>
 </section>
-<section class="about_us"></section>
+<section class="about_us">
+    <div class="container">
+        <h4>About us</h4>
+        <h3>The beautiful story</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat.</p>
+        <div class="link_holder">
+            <a href="#" class="link_story">Our story</a>
+            <a href="#" class="link_contact">Contact us</a>
+        </div>
+    </div>
+</section>
 <section class="best_sellers"></section>
 <section class="best_selling_big"></section>
 <section class="how_it_works">
