was added adaptive +fixed bugs

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         <h4>Testimonials</h4>
         <h3>What our customers say</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-        <div class="testimonials_list d-flex">
+        <div class="testimonials_list d-flex space-between">
             <div>
                 <article>
                     <img src="images/star_icon.svg" alt="star_ico">
