--- a/index.html
+++ b/index.html
@@ -86,11 +86,13 @@
         <div class="testimonials_list d-flex space-between">
             <div>
                 <article>
-                    <img src="images/star_icon.svg" alt="star_ico">
-                    <img src="images/star_icon.svg" alt="star_ico">
-                    <img src="images/star_icon.svg" alt="star_ico">
-                    <img src="images/star_icon.svg" alt="star_ico">
-                    <img src="images/star_icon.svg" alt="star_ico">
+                    <div>
+                        <img src="images/star_icon.svg" alt="star_ico">
+                        <img src="images/star_icon.svg" alt="star_ico">
+                        <img src="images/star_icon.svg" alt="star_ico">
+                        <img src="images/star_icon.svg" alt="star_ico">
+                        <img src="images/star_icon.svg" alt="star_ico">
+                    </div>
                     <q>Nulla facilisi. Sed sit amet commodo quam, ac viverra turpis. Maecenas vitae pulvinar lacus.
                         Suspendisse cursus turpis vel ante laoreet vehicula.</q>
                     <div class="card d-flex">
@@ -99,11 +101,13 @@
                     </div>
                 </article>
                 <article>
-                    <img src="images/star_icon.svg" alt="star_ico">
-                    <img src="images/star_icon.svg" alt="star_ico">
-                    <img src="images/star_icon.svg" alt="star_ico">
-                    <img src="images/star_icon.svg" alt="star_ico">
-                    <img src="images/star_icon.svg" alt="star_ico">
+                    <div>
+                        <img src="images/star_icon.svg" alt="star_ico">
+                        <img src="images/star_icon.svg" alt="star_ico">
+                        <img src="images/star_icon.svg" alt="star_ico">
+                        <img src="images/star_icon.svg" alt="star_ico">
+                        <img src="images/star_icon.svg" alt="star_ico">
+                    </div>
                     <q>Maecenas tellus mauris, sagittis a dui sed, porta convallis est. Morbi sapien massa, semper non tincidunt sed, lobortis vel nisl. Curabitur fermentum eget justo nec efficitur.</q>
                     <div class="card d-flex">
                         <img src="images/Kate_photo.jpg" alt="Kate_photo">
@@ -113,11 +117,13 @@
             </div>
             <div>
                 <article>
-                    <img src="images/star_icon.svg" alt="star_ico">
-                    <img src="images/star_icon.svg" alt="star_ico">
-                    <img src="images/star_icon.svg" alt="star_ico">
-                    <img src="images/star_icon.svg" alt="star_ico">
-                    <img src="images/star_icon.svg" alt="star_ico">
+                    <div>
+                        <img src="images/star_icon.svg" alt="star_ico">
+                        <img src="images/star_icon.svg" alt="star_ico">
+                        <img src="images/star_icon.svg" alt="star_ico">
+                        <img src="images/star_icon.svg" alt="star_ico">
+                        <img src="images/star_icon.svg" alt="star_ico">
+                    </div>
                     <q>Sed mattis scelerisque metus. Mauris ultricies, dui id finibus pretium, neque sapien vestibulum lectus, id tincidunt risus nulla at magna. Nulla rhoncus dolor at est vehicula, vel gravida risus vulputate libero.</q>
                     <div class="card d-flex">
                         <img src="images/Mollie_photo.jpg" alt="Mollie_photo">
@@ -125,11 +131,13 @@
                     </div>
                 </article>
                 <article>
-                    <img src="images/star_icon.svg" alt="star_ico">
-                    <img src="images/star_icon.svg" alt="star_ico">
-                    <img src="images/star_icon.svg" alt="star_ico">
-                    <img src="images/star_icon.svg" alt="star_ico">
-                    <img src="images/star_icon.svg" alt="star_ico">
+                    <div>
+                        <img src="images/star_icon.svg" alt="star_ico">
+                        <img src="images/star_icon.svg" alt="star_ico">
+                        <img src="images/star_icon.svg" alt="star_ico">
+                        <img src="images/star_icon.svg" alt="star_ico">
+                        <img src="images/star_icon.svg" alt="star_ico">
+                    </div>
                     <q>Phasellus laoreet posuere est quis euismod. In facilisis sem non tincidunt feugiat. Mauris vitae elit eget quam sollicitudin gravida. Praesent imperdiet viverra justo nec ullamcorper. In dictum felis at mauris fringilla pulvinar.</q>
                     <div class="card d-flex">
                         <img src="images/Koray_photo.jpg" alt="Koray_photo">
@@ -139,11 +147,13 @@
             </div>
             <div>
                 <article>
-                    <img src="images/star_icon.svg" alt="star_ico">
-                    <img src="images/star_icon.svg" alt="star_ico">
-                    <img src="images/star_icon.svg" alt="star_ico">
-                    <img src="images/star_icon.svg" alt="star_ico">
-                    <img src="images/star_icon.svg" alt="star_ico">
+                    <div>
+                        <img src="images/star_icon.svg" alt="star_ico">
+                        <img src="images/star_icon.svg" alt="star_ico">
+                        <img src="images/star_icon.svg" alt="star_ico">
+                        <img src="images/star_icon.svg" alt="star_ico">
+                        <img src="images/star_icon.svg" alt="star_ico">
+                    </div>
                     <q>Duis sit amet mi et mauris sollicitudin semper. Donec quam justo, accumsan condimentum sollicitudin sed, posuere ac lacus etiam saggitis sed nisi.</q>
                     <div class="card d-flex">
                         <img src="images/Lori_photo.jpg" alt="Lori_photo">
@@ -151,11 +161,13 @@
                     </div>
                 </article>
                 <article>
-                    <img src="images/star_icon.svg" alt="star_ico">
-                    <img src="images/star_icon.svg" alt="star_ico">
-                    <img src="images/star_icon.svg" alt="star_ico">
-                    <img src="images/star_icon.svg" alt="star_ico">
-                    <img src="images/star_icon.svg" alt="star_ico">
+                    <div>
+                        <img src="images/star_icon.svg" alt="star_ico">
+                        <img src="images/star_icon.svg" alt="star_ico">
+                        <img src="images/star_icon.svg" alt="star_ico">
+                        <img src="images/star_icon.svg" alt="star_ico">
+                        <img src="images/star_icon.svg" alt="star_ico">
+                    </div>
                     <q>Etiam sagittis nec tortor in scelerisque. Sed et bibendum nisi, sit amet varius libero. Maecenas posuere convallis tellus, at hendrerit sem.</q>
                     <div class="card d-flex">
                         <img src="images/Noah_photo.jpg" alt="Noah_photo">
