best_selling_big

--- a/index.html
+++ b/index.html
@@ -48,8 +48,30 @@
         </div>
     </div>
 </section>
+
 <section class="best_sellers"></section>
-<section class="best_selling_big"></section>
+
+<section class="best_selling_big">
+    <div class="best_selling_big_div">
+        <article class="best_selling_big_article">
+            <div class="best_selling_big_text">
+                <h3>Best selling creams</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.<br> Suspendisse varius enim in eros elementum tristique.</p>
+                <a href="#">Shop now</a>
+            </div>
+            <img src="images/creams.jpg" alt="creams">
+        </article>
+        <article class="best_selling_big_article">
+            <div class="best_selling_big_text">
+                <h3>Best selling lotions</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.<br> Suspendisse varius enim in eros elementum tristique.</p>
+                <a href="#">Shop now</a>
+            </div>
+            <img src="images/lotions.jpg" alt="lotions">            
+        </article>
+    </div>
+</section>
+
 <section class="how_it_works">
     <div class="container">
         <div class="how_it_works_first">
