add header section

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter&family=Roboto&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="css/owl.carousel.css">
     <link rel="stylesheet" href="css/owl.theme.default.css">
     <link rel="stylesheet" href="https://code.jquery.com/ui/1.13.2/themes/base/jquery-ui.css">
@@ -30,7 +31,67 @@
 </head>
 <body>
 <header>
+    <div class="container">
+        <div class="hidden_board d-flex">
+            <p>Free worldwide shipping for orders over $55. Shop now.</p>
+            <button type="button">
+                <i class="fa-solid fa-x"></i>
+            </button>
+        </div>
+        <nav class="space-between">
+            <button type="button" class="burger">
+                <i class="fa-solid fa-bars fa-xl"></i>
+            </button>
+            <ul class="menu">
+                <li>
+                    <a href="#">Products</a>
+                </li>
+                <li>
+                    <a href="#">Story</a>
+                </li>
+                <li>
+                    <a href="#">Blog</a>
+                </li>
+                <li>
+                    <a href="#">Collections <i class="fa-solid fa-chevron-down"></i></a>
+                </li>
+                <li>
+                    <a href="#">Contact</a>
+                </li>
+            </ul>
+            <ul class="menu-buttons">
+                 <li>
+                    <a href="#" class="link_cart"><i class="fa-solid fa-bag-shopping"></i>Cart</a>
+                </li>
+                <li>
+                    <a href="#" class="link_sub">Subscribe</a>
+                </li>
+            </ul>
+            <div class="burger_menu_wrapper">
+                <button type="button" class="close">
+                    <i class="fa-solid fa-x fa-xl"></i>
+                </button>
+                <ul class="burger_menu">
+                    <li>
+                        <a href="#">Products</a>
+                    </li>
+                    <li>
+                        <a href="#">Story</a>
+                    </li>
+                    <li>
+                        <a href="#">Blog</a>
+                    </li>
+                    <li>
+                        <a href="#">Collections</a>
+                    </li>
+                    <li>
+                        <a href="#">Contact</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
 
+    </div>
 </header>
 <section class="main_banner">
     <div class="owl-carousel_1">
