--- a/index.html
+++ b/index.html
@@ -283,7 +283,51 @@
         </div>
     </div>
 </section>
-<section class="latest_posts"></section>
+<section class="latest_posts">
+    <div class="container d-flex space-between">
+        <div>
+            <h4>Latest posts</h4>
+            <h3>From our blog</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        </div>
+        <a href="#" class="button">View all posts</a>
+    </div>
+    <div class="container d-flex space-between">
+        <article>
+            <img src="images/Read_more-1.jpg" alt="Picture">
+            <div  class="description">
+                <p class="headline">Dry acne prone skincare<br> routine</p>
+                <a href="#" class="descr">Anti aging</a>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros.
+                </p>
+                <a href="#" class="Read_more">Read more</a>
+            </div>
+        </article>
+        <article>
+            <img src="images/Read_more-3.jpg" alt="Picture">
+            <div  class="description">
+                <p class="headline">5 ingredients to calm down stressed out skin</p>
+                <a href="#" class="descr">Skin types</a>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros.
+                </p>
+                <a href="#" class="Read_more">Read more</a>
+            </div>
+        </article>
+        <article>
+            <img src="images/Read_more-2.jpg" alt="Picture">
+            <div  class="description">
+                <p class="headline">How to use products for sensitive skin</p>
+                <a href="#" class="descr">Organic skincare</a>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros.
+                </p>
+                <a href="#" class="Read_more">Read more</a>
+            </div>
+        </article>
+    </div>
+</section>
 <section class="carusel container">
     <div class="owl-carousel">
         <article>
