add main_banner; h1; owl-carousel_1

--- a/index.html
+++ b/index.html
@@ -94,8 +94,61 @@
     </div>
 </header>
 <section class="main_banner">
-    <div class="owl-carousel_1">
-
+    <div class="container">
+        <h1>Hydrated skin in 3 easy steps</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique duis Cursus mi quis viverra ornare.</p>
+        <a href="#" class="main_banner_a_btn">Shop now</a>
+        <a href="#" class="main_banner_a_btn">Our story</a>
+        <h5>Trusted by the world's best companies</h5>
+        <a href="#" class="main_banner_a_logo"><img src="images/logo_main_1.svg" alt="logo"></a>
+        <a href="#" class="main_banner_a_logo"><img src="images/logo_main_2.svg" alt="logo"></a>
+        <a href="#" class="main_banner_a_logo"><img src="images/logo_main_3.svg" alt="logo"></a>
+    </div>
+    <div class="main_banner_img">
+    </div>
+    <div class="owl-carousel_1 owl-carousel">
+        <span class="span_carousel_1">
+            1-day delivery
+        </span>
+        <span class="span_carousel_1">
+            Healthy supplement
+        </span>
+        <span class="span_carousel_1">
+            Gluten-free
+        </span>
+        <span class="span_carousel_1">
+            Natural products
+        </span>
+        <span class="span_carousel_1">
+            Free shipping
+        </span>
+        <span class="span_carousel_1">
+            Eco-friendly
+        </span>
+        <span class="span_carousel_1">
+            Vitamins
+        </span>
+        <span class="span_carousel_1">
+            1-day delivery
+        </span>
+        <span class="span_carousel_1">
+            Healthy supplement
+        </span>
+        <span class="span_carousel_1">
+            Gluten-free
+        </span>
+        <span class="span_carousel_1">
+            Natural products
+        </span>
+        <span class="span_carousel_1">
+            Free shipping
+        </span>
+        <span class="span_carousel_1">
+            Eco-friendly
+        </span>
+        <span class="span_carousel_1">
+            Vitamins
+        </span>
     </div>
 </section>
 <section class="about_us">
