--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
 </section>
 <section class="latest_posts">
     <div class="container d-flex space-between">
-        <div>
+        <div class="latest_posts_text_container">
             <h4>Latest posts</h4>
             <h3>From our blog</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
