--- a/index.html
+++ b/index.html
@@ -364,26 +364,14 @@
         </article>
     </div>
 </section>
-<section class="carusel container">
-    <div class="owl-carousel">
-        <article>
-            <a href="#"><img src="images/foto_carusel1.jpg" alt="foto"></a>
-        </article>
-        <article>
-            <a href="#"><img src="images/foto_carusel2.jpg" alt="foto"></a>
-        </article>
-        <article>
-            <a href="#"><img src="images/foto_carusel3.jpg" alt="foto"></a>
-        </article>
-        <article>
-            <a href="#"><img src="images/foto_carusel4.jpg" alt="foto"></a>
-        </article>
-        <article>
-            <a href="#"><img src="images/foto_carusel5.jpg" alt="foto"></a>
-        </article>
-        <article>
-            <a href="#"><img src="images/foto_carusel6.jpg" alt="foto"></a>
-        </article>
+<section class="carusel">
+    <div class="owl-carousel_2 owl-carousel">
+        <a href="#"><img src="images/foto_carusel1.jpg" alt="foto"></a>
+        <a href="#"><img src="images/foto_carusel2.jpg" alt="foto"></a>
+        <a href="#"><img src="images/foto_carusel3.jpg" alt="foto"></a>
+        <a href="#"><img src="images/foto_carusel4.jpg" alt="foto"></a>
+        <a href="#"><img src="images/foto_carusel5.jpg" alt="foto"></a>
+        <a href="#"><img src="images/foto_carusel6.jpg" alt="foto"></a>
     </div>
 </section>
 <footer>
