add class to divs

--- a/index.html
+++ b/index.html
@@ -203,9 +203,9 @@
         <h3>What our customers say</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
         <div class="testimonials_list d-flex space-between">
-            <div>
+            <div class="item1">
                 <article>
-                    <div>
+                    <div class="star_icons">
                         <img src="images/star_icon.svg" alt="star_ico">
                         <img src="images/star_icon.svg" alt="star_ico">
                         <img src="images/star_icon.svg" alt="star_ico">
@@ -220,7 +220,7 @@
                     </div>
                 </article>
                 <article>
-                    <div>
+                    <div class="star_icons">
                         <img src="images/star_icon.svg" alt="star_ico">
                         <img src="images/star_icon.svg" alt="star_ico">
                         <img src="images/star_icon.svg" alt="star_ico">
@@ -234,9 +234,9 @@
                     </div>
                 </article>
             </div>
-            <div>
+            <div class="item2">
                 <article>
-                    <div>
+                    <div class="star_icons">
                         <img src="images/star_icon.svg" alt="star_ico">
                         <img src="images/star_icon.svg" alt="star_ico">
                         <img src="images/star_icon.svg" alt="star_ico">
@@ -250,7 +250,7 @@
                     </div>
                 </article>
                 <article>
-                    <div>
+                    <div class="star_icons">
                         <img src="images/star_icon.svg" alt="star_ico">
                         <img src="images/star_icon.svg" alt="star_ico">
                         <img src="images/star_icon.svg" alt="star_ico">
@@ -264,9 +264,9 @@
                     </div>
                 </article>
             </div>
-            <div>
+            <div class="item3">
                 <article>
-                    <div>
+                    <div class="star_icons">
                         <img src="images/star_icon.svg" alt="star_ico">
                         <img src="images/star_icon.svg" alt="star_ico">
                         <img src="images/star_icon.svg" alt="star_ico">
@@ -280,7 +280,7 @@
                     </div>
                 </article>
                 <article>
-                    <div>
+                    <div class="star_icons">
                         <img src="images/star_icon.svg" alt="star_ico">
                         <img src="images/star_icon.svg" alt="star_ico">
                         <img src="images/star_icon.svg" alt="star_ico">
