--- a/index.html
+++ b/index.html
@@ -298,26 +298,60 @@
     </div>
 </section>
 <section class="faq">
-    <div id="accordion">
-        <h3>Section 1</h3>
-        <div>
-            <p>
-                Mauris mauris ante, blandit et, ultrices a, suscipit eget, quam. Integer
-                ut neque. Vivamus nisi metus, molestie vel, gravida in, condimentum sit
-                amet, nunc. Nam a nibh. Donec suscipit eros. Nam mi. Proin viverra leo ut
-                odio. Curabitur malesuada. Vestibulum a velit eu ante scelerisque vulputate.
-            </p>
-        </div>
-        <h3>Section 2</h3>
-        <div>
-            <p>
-                Sed non urna. Donec et ante. Phasellus eu ligula. Vestibulum sit amet
-                purus. Vivamus hendrerit, dolor at aliquet laoreet, mauris turpis porttitor
-                velit, faucibus interdum tellus libero ac justo. Vivamus non quam. In
-                suscipit faucibus urna.
-            </p>
-        </div>
-    </div>
+   <div class="container d-flex space-between">
+       <div class="description w-100">
+           <h3>Frequently asked<br> questions</h3>
+           <p>Frequently asked questions ordered by popularity. Remember that if the visitor has not committed to the call to action, they may still have questions (doubts) that can be answered.</p>
+           <a href="#">Contact us</a>
+       </div>
+       <div id="accordion">
+           <h3>Are the fragrances in your products natural and safe?</h3>
+           <div>
+               <p>
+                   Mauris mauris ante, blandit et, ultrices a, suscipit eget, quam. Integer
+                   ut neque. Vivamus nisi metus, molestie vel, gravida in, condimentum sit
+                   amet, nunc. Nam a nibh. Donec suscipit eros. Nam mi. Proin viverra leo ut
+                   odio. Curabitur malesuada. Vestibulum a velit eu ante scelerisque vulputate.
+               </p>
+           </div>
+           <h3>Are Beautico products vegan?</h3>
+           <div>
+               <p>
+                   Sed non urna. Donec et ante. Phasellus eu ligula. Vestibulum sit amet
+                   purus. Vivamus hendrerit, dolor at aliquet laoreet, mauris turpis porttitor
+                   velit, faucibus interdum tellus libero ac justo. Vivamus non quam. In
+                   suscipit faucibus urna.
+               </p>
+           </div>
+           <h3>What are the expiry dates for Beautico products?</h3>
+           <div>
+               <p>
+                   Mauris mauris ante, blandit et, ultrices a, suscipit eget, quam. Integer
+                   ut neque. Vivamus nisi metus, molestie vel, gravida in, condimentum sit
+                   amet, nunc. Nam a nibh. Donec suscipit eros. Nam mi. Proin viverra leo ut
+                   odio. Curabitur malesuada. Vestibulum a velit eu ante scelerisque vulputate.
+               </p>
+           </div>
+           <h3>Is your packaging environmentally friendly?</h3>
+           <div>
+               <p>
+                   Sed non urna. Donec et ante. Phasellus eu ligula. Vestibulum sit amet
+                   purus. Vivamus hendrerit, dolor at aliquet laoreet, mauris turpis porttitor
+                   velit, faucibus interdum tellus libero ac justo. Vivamus non quam. In
+                   suscipit faucibus urna.
+               </p>
+           </div>
+           <h3>Does Beautico products give me an allergic reaction?</h3>
+           <div>
+               <p>
+                   Mauris mauris ante, blandit et, ultrices a, suscipit eget, quam. Integer
+                   ut neque. Vivamus nisi metus, molestie vel, gravida in, condimentum sit
+                   amet, nunc. Nam a nibh. Donec suscipit eros. Nam mi. Proin viverra leo ut
+                   odio. Curabitur malesuada. Vestibulum a velit eu ante scelerisque vulputate.
+               </p>
+           </div>
+       </div>
+   </div>
 </section>
 <section class="latest_posts">
     <div class="container d-flex space-between">
